Makes suggestion results full width on mobile. Fixes issues with color and layout.

--- a/styles/components/_suggestions.scss
+++ b/styles/components/_suggestions.scss
@@ -54,7 +54,7 @@
         top: 26px;
         @include xs { top: 33px; }
         z-index: 4;
-        background-color: mix(white, $gold, $weight: 0.5);
+        background-color: $gold;
     
         margin-top: 0;
         width: 100%;
@@ -64,8 +64,10 @@
             padding-left: 0;
             margin: 0;
             @include xs {
-                position: absolute;
-                width: 100%;
+                position: fixed;
+                width: 100vw;
+                left: 0;
+                background-color: $gold;
             }
         }
         button {
@@ -80,7 +82,7 @@
     
             line-height: 1;
             background-color: $gold;
-            // @include xs { background-color: rgb(69, 39, 35); }
+            
             cursor: pointer;
              > * {font-size: .75em;}
             &.active {
@@ -88,9 +90,7 @@
                 background-color: darken($color: $gold, $amount: 50%);
                 padding-right: 5px;
                 @include xs {
-                    position: absolute;
-                    right: -20%;
-                    width: 90vw;
+                    background-color: darken($color: $gold, $amount: 20%);
                 }
             }
         }
